# LibWchar2

./: .gitattributes  .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.RU.md  README.md  _git-commit.sh  aclocal.m4  appveyor.yml  autogen.sh  build.sh  commit.sh  config.h.in  config.status  configure  configure.ac  libtool  libwchar2.pc.in  package.json  package.json.in  rocro.yml
docs/: CHANGELOG-master.md  Doxyfile  Doxyfile.in  README-CPPCHECK.RU.md  README-CPPCHECK.md  README-WINAPIEXT.RU.md  README-WINAPIEXT.md  README.RU.md  README.md  WCHAR2-LIST-MAP.md  bm.css  dl.xml  doxygen-warning-log.txt  doxygen.tag  libchar2.cfg  libchar2.cppcheck  man-license.dox  man-license.dox.in  wchar2.3
docs/cppcheck/: README.RU.md  README.md  libwchar2.cfg  libwchar2.cppcheck
docs/doxdesc/: _wcsftime.dox
docs/doxman/: __template__.doxy  btowc.dox  iswalnum.dox  iswalpha.dox  iswblank.dox  iswcntrl.dox  iswctype.dox  iswdigit.dox  iswgraph.dox  iswlower.dox  iswprint.dox  iswpunct.dox  iswspace.dox  iswupper.dox  iswxdigit.dox  mblen.dox  mbrlen.dox  mbrtowc.dox  mbsinit.dox  mbsnrtowcs.dox  mbsrtowcs.dox  mbstowcs.dox  mbtowc.dox  mlicense.dox  towctrans.dox  towlower.dox  towupper.dox  waccess.dox  wcpcpy.dox  wcpncpy.dox  wcrtomb.dox  wcscasecmp.dox  wcscat.dox  wcschr.dox  wcscmp.dox  wcscpy.dox  wcscspn.dox  wcsdup.dox  wcsftime.dox  wcslen.dox  (+40 more)
docs/html/: annotated.html  bm.css  btowc.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  iswalnum.html  iswalpha.html  iswblank.html  iswcntrl.html  iswctype.html  iswdigit.html  iswgraph.html  iswlower.html  iswprint.html  iswpunct.html  iswspace.html  iswupper.html  iswxdigit.html  mblen.html  mbrlen.html  mbrtowc.html  mbsinit.html  mbsnrtowcs.html  mbsrtowcs.html  mbstowcs.html  mbtowc.html  menudata.js  mlicense.html  pages.html  towctrans.html  towlower.html  towupper.html  (+58 more)
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_6.js  search.css  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
docs/man/man3/: _wctype.3  mlicense.3  sz.3  wcpncpy.3  wcscasecmp.3  wcsncasecmp.3  wcstoimax.3  wctob.3
docs/nuget/: LibWchar2ext.0.0.9.nupkg  LibWchar2ext.nupkg  Package.nuspec  Package.nuspec.in  Package.target  libwchar2ext.0.0.10.nupkg  libwchar2ext.0.0.9.nupkg  nuget-build.cmd
example/: CMakeLists.txt  Makefile  fs-redifine.c  fs-redifine.libc  wreaddir_cb-cross-platform.c
example/TinyDir-Wchar2/: Makefile  tinydir-release-1.2.3.diff  tinydir-test-list.c  tinydir-test.c  tinydir.h
include/: string_s.h  wchar2.h  wchar2ext.h
src/: Makefile.am  Makefile.in  btowc.c  fputwc.c  fputws.c  iswalnum.c  iswalpha.c  iswblank.c  iswcntrl.c  iswctype.c  iswdigit.c  iswgraph.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswupper.c  iswxdigit.c  libbuild.h  libwchar.c  libwchar.h  libwcharext.c  libwcharext.h  mblen.c  mbrlen.c  mbrtowc.c  mbsinit.c  mbsnrtowcs.c  mbsrtowcs.c  mbstowcs.c  mbtowc.c  string_s.c  strptime_w32.c  towctrans.c  vfprintf.c  vfwprintf.c  vfxprint.c  vfxprint.h  waccess.c  wbasename.c  (+29 more)
test/: Makefile.am  Makefile.in  check_wchar2  check_wchar2.c  check_wchar2_MSVC.c  check_wchar2_include.c  check_wchar2_suite.c  check_wchar2_utf8.h  core.3701  core.3719  core.3721  createtest.sh  t.c  test-€-€.txt  test_Lmacro.c  test_btowc.c  test_fputwc.c  test_fputws.c  test_iswalnum.c  test_iswalpha.c  test_iswblank.c  test_iswcntrl.c  test_iswctype.c  test_iswdigit.c  test_iswgraph.c  test_iswlower.c  test_iswprint.c  test_iswpunct.c  test_iswspace.c  test_iswupper.c  test_iswxdigit.c  test_mblen.c  test_mbrlen.c  test_mbrtowc.c  test_mbsinit.c  test_mbsnrtowcs.c  test_mbsrtowcs.c  test_mbstowcs.c  test_mbtowc.c  test_towctrans.c  (+55 more)
winext/: AutoSVNLists.list  CMakeLists.txt  README.md  cmake-build-debug.cmd  cmake-build-release.cmd  cmake-build.cmd  only-build.cmd
